Adds social web 2.0 buttons
- Adds a Facebook like, Twitter tweet, and Google plus one button
- Places social buttons neatly in line to the left of the navigation drop down icon
- Sets up ruby variable to link to the correct call to action for the social buttons

Signed-off-by: skinny_much <skinny_much@fastmail.fm>

--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
           </a>
           <span class="brand" href="#"><%= site_title %>:</span>
           <span class="slogan"><%= site_slogan %></span>
+          <div id="social_buttons">
+            <a href="<%= site_facebook_like %>"><img src="assets/img/facebook-like-share-page-link-social-button.png" /></a>
+            <a href="<%= site_twitter_tweet %>"><img src="assets/img/twitter-tweet-share-link-social-button.png" /></a>
+            <a href="<%= site_google_plus_one %>"><img src="assets/img/google-+-plus-one-page-link-social-button.png" /></a>
+          </div>
           <div class="nav-collapse">
             <%= partial :navigation %>
           </div><!--/.nav-collapse -->
